fix some warning after commit